[tool.poetry]
name = "projectend"
version = "0.13.0"
description = "calculate the end of projects"
authors = ["Jean-Louis Fuchs <jean-louis.fuchs@adfinis-sygroup.ch>"]
homepage = "https://github.com/ganwell/projectend"
repository = "https://github.com/ganwell/projectend"
license = "AGPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.scripts]
projectend = 'projectend:cmd'

[tool.poetry.dependencies]
python = ">3.7"
toml = "^0.10.2"
intervaltree = "^3.1.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
